syntax = "proto3";
package pb;

message request {
  string reqId = 1;
  string from = 2;
  reqtype reqtype = 3;
  bytes data = 4;
}

enum reqtype {
  GetOnlineNodes = 0;
  NewProxy = 1;
  NewCircuit = 2;
}

message newCircuit {
  string to = 1;
  string sessionId = 2;
}

message newProxy {
  string time = 1;
  string idHash = 2;
}


